# course-tools

./: README.md  pyproject.toml  setup.cfg
.basedpyright/: baseline.json
.github/workflows/: ci.yml
course_tools/: cli.py  data.py  grade.py  grade_tools.py  input.py  output.py  query.py
