[project]
name = "course_tools"
description = "Ad-hoc tools for UIUC courses"
version = "0.1.0"
authors = [
    { name = "Andreas Kloeckner", email = "inform@tiker.net" }
]
dependencies = [
    "numpy",
    "pytools",
    "beautifulsoup4",
    "lxml",
    "openpyxl",
]

[project.scripts]
coursetool = "course_tools.cli:main"
